Fixed Word wrap issue in citations on about diabetes

--- a/about.css
+++ b/about.css
@@ -1,111 +1,110 @@
 @import url("https://fonts.googleapis.com/css?family=Lexend");
 @import url("https://fonts.googleapis.com/css?family=Inter");
 
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
-html { font-size: 100%; }  /* 16px */
+html {
+  font-size: 100%;
+} /* 16px */
 
 body {
-    color: #707070;
-    margin: 0;
-    width: 100vw;
-    min-width: 100vw;
-    max-width: 100vw;
-    align-items: center;
-    font-family: 'Lexend', 'Inter', Arial, Helvetica, sans-serif;
+  color: #707070;
+  margin: 0;
+  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
+  align-items: center;
+  font-family: "Lexend", "Inter", Arial, Helvetica, sans-serif;
 }
 
 nav {
-    font-family: 'Inter', 'Lexend', Arial, Helvetica, sans-serif;
-    width: 100%;
-    
-    background-color: #488adc;
-    color: #ffffff;
-    position: fixed;
-    overflow: hidden;
-    z-index: 300;
-    
+  font-family: "Inter", "Lexend", Arial, Helvetica, sans-serif;
+  width: 100%;
+
+  background-color: #488adc;
+  color: #ffffff;
+  position: fixed;
+  overflow: hidden;
+  z-index: 300;
 }
 
 #nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    height: 3rem;
-    margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  height: 3rem;
+  margin: auto;
 }
 
-
-
-.nav-name div, .nav-logo {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 1.7rem;
+.nav-name div,
+.nav-logo {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 1.7rem;
 }
-
-
 
 .nav-logo {
-    width: 2.5rem;
+  width: 2.5rem;
 }
 
 .nav-links {
-    display: flex;
-    justify-content: space-between;
-    width: 10rem;
-    font-size: 1.3rem;
-    
+  display: flex;
+  justify-content: space-between;
+  width: 10rem;
+  font-size: 1.3rem;
 }
 
 .nav-back {
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
-.nav-back span, .nav-back div {
-    display: inline-block;
-    vertical-align: middle;
+.nav-back span,
+.nav-back div {
+  display: inline-block;
+  vertical-align: middle;
 }
 
-
+#citation-list li {
+  /* white-space: pre-wrap; CSS3 */ /*causing issues on Chrome */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
 
 /* Icons from Google Fonts website: 
 https://developers.google.com/fonts/docs/material_icons */
 .materials_icon {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 14px;   /* Preferred icon size */
-    display: inline-block;
-    line-height: 1;
-    text-transform: none;
-    letter-spacing: normal;
-    word-wrap: normal;
-    white-space: nowrap;
-    direction: ltr;
-    
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 14px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
 
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
 
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
 
-    /* Support for IE. */
-    font-feature-settings: 'liga';
+  /* Support for IE. */
+  font-feature-settings: "liga";
 }
-
-
-
-
 
 .ref-a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
-
 
 /* .aboutDropdown {
     color: #ffffff;
@@ -123,107 +122,105 @@ https://developers.google.com/fonts/docs/material_icons */
 }
 
 /* Dropdown menu for about pages appear when hovering */
-.about-dropdown:hover .dropdown {display: block;} */
-
-
-strong {
-    font-weight: bold;
+.about-dropdown:hover .dropdown {
+  display: block;
+}
+*/ strong {
+  font-weight: bold;
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    max-height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 iframe {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
-    font-weight: bold;
-    font-size: 40px;
-    text-align: center;
-    font-family: 'Inter', 'Lexend', Arial, Helvetica, sans-serif;
-    padding-top: 30px;
-    padding-bottom: 10px;
+  font-weight: bold;
+  font-size: 40px;
+  text-align: center;
+  font-family: "Inter", "Lexend", Arial, Helvetica, sans-serif;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 
 h2 {
-    font-weight: bolder;
-    font-size: 30px;
-    text-align: left;
-    font-family: 'Inter', 'Lexend', Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  font-size: 30px;
+  text-align: left;
+  font-family: "Inter", "Lexend", Arial, Helvetica, sans-serif;
 }
 
 h3 {
-    font-size: 24px;
-    text-align: left;
-    font-family: 'Inter', 'Lexend', Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  text-align: left;
+  font-family: "Inter", "Lexend", Arial, Helvetica, sans-serif;
 }
 
 p {
-    text-align: justify;
-    font-family: 'Lexend', 'Inter', Arial, Helvetica, sans-serif;
+  text-align: justify;
+  font-family: "Lexend", "Inter", Arial, Helvetica, sans-serif;
 }
 
 ul {
-    list-style-position: inside;
-    font-family: 'Lexend', 'Inter', Arial, Helvetica, sans-serif;
+  list-style-position: inside;
+  font-family: "Lexend", "Inter", Arial, Helvetica, sans-serif;
 }
 
 ol {
-    list-style-position: inside;
-    font-family: 'Lexend', 'Inter', Arial, Helvetica, sans-serif;
+  list-style-position: inside;
+  font-family: "Lexend", "Inter", Arial, Helvetica, sans-serif;
 }
 
 section {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 896px;
-    padding: 32px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 896px;
+  padding: 32px;
 }
 
 .ytVid-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 20px;
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 20px;
+  height: 0;
+  overflow: hidden;
 }
 
 .ytVid-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 hr {
-    width: 75%;
+  width: 75%;
 }
-
-
 
 /* Make the back button disappear when the website is in the desktop view */
 @media screen and (min-width: 1024px) {
-    .nav-back {
-        display: none;
-    }
+  .nav-back {
+    display: none;
+  }
 }
 
 /* Make the about and login button disappear when the website is in the tablet and phone view */
 @media screen and (max-width: 1024px) {
-    .nav-name, .nav-links {
-        display: none;
-    }
-
+  .nav-name,
+  .nav-links {
+    display: none;
+  }
 }
